--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- public/index.html -->
+<!-- mp-1/index.html -->
 <!-- Last Updated by Zhixin Li(lzhx@bu.edu) -->
 <!-- Home page of Online Resume. -->
 
@@ -7,64 +7,68 @@
     <head>
         <meta charset="UTF-8">
         <title>Resume | -L.Z.X-</title>
-        <link rel="stylesheet" type="text/css" href="../src/styles/resume_styles.css">
+        <link rel="stylesheet" type="text/css" href="./src/styles/resume_styles.css">
     </head>
     <body>
-        <header>
-            <h1>Zhixin Li</h1>
-            <p>Current Boston University Student in Computer Science (BA) and Sculpture (BFA).</p>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="education.html">Education</a></li>
-                <li><a href="experience.html">Experiences</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <!-- <li><a href="certificate.html">Certificates</a></li> -->
-                <!-- <li><a href="reference.html">References</a></li> -->
-                <!-- <li><a href="achievement.html">Achievements</a></li> -->
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main>
-            <h2>About Me</h2>
-            <p>
-                I am a candle maker, an insect sympathizer, a trash collector, a driver with a not-so-valid license,
-                and an artist who doesn't call myself an artist.
-            </p>
-            <p>
-                I am a student at <strong>Boston University</strong> studying <strong>Sculpture</strong> and <strong>Computer Science</strong>,
-                and people constantly think they misheard my major.
-                A number of interests play parts in my life, my friends and family being some of them.
-            </p>
-            <p>
-                The "About Me" I have ever written before are my University Application Essays and my Artist Statements,
-                in which I explain why I am applying to higher education or what I am doing with my art.
-                I hereby explain why I am here and what I am doing.
-            </p>
-            <p>
-                I am here to experience another life and another part of the world.
-                In 10 years this moment would be like a dream for me,
-                and I will no longer be experiencing this place as an insider, just like before I came. I do sculpture,
-                shape cardboard, shattered glass, and wax. I play games, and I make games. I code.
-                I find meaning by identifying and representing objects with data.
-                I set pointers to recall this moment and come back to this dream when I need to.
-                I travel in time, and fetch the pieces of dreams in the palace I built,
-                feeding them into an ever-going execution cycle.
-                I manufacture, with my fetch-execute cycle, from my pieces of dreams and experiences,
-                new dreams and experiences that have not happened before.
-                I am thus, instead of an artist, a manufacturer of art, or whatever my products are called.
-            </p>
-            <p>
-                I am a piece of flesh on a set of bones. In the end, I am a writer.
-                A writer means a variable or a recorder.
-                I change things and record what has been changed; that is called a test. I am a tester with my writings.
-            </p>
-        </main>
-        <footer>
-            <p>All Rights Reserved by Zhixin Li <a herf="credit.html">Credit</a> &copy;</p>
-        </footer>
+        <div>
+            <header>
+                <h1>Zhixin Li</h1>
+                <p>Current Boston University Student in Computer Science (BA) and Sculpture (BFA).</p>
+            </header>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="./edu/education.html">Education</a></li>
+                        <li><a href="./exp/experience.html">Experiences</a></li>
+                        <li><a href="./proj/projects.html">Projects</a></li>
+                        <li><a href="./portfolio/portfolio.html">Portfolio</a></li>
+                        <!-- <li><a href="certificate.html">Certificates</a></li> -->
+                        <!-- <li><a href="reference.html">References</a></li> -->
+                        <!-- <li><a href="achievement.html">Achievements</a></li> -->
+                        <li><a href="./ref/contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+                <main>
+                    <h2>About Me</h2>
+                    <p>
+                        I am a candle maker, an insect sympathizer, a trash collector, a driver with a not-so-valid license,
+                        and an artist who doesn't call myself an artist.
+                    </p>
+                    <p>
+                        I am a student at <strong>Boston University</strong> studying <strong>Sculpture</strong> and <strong>Computer Science</strong>,
+                        and people constantly think they misheard my major.
+                        A number of interests play parts in my life, my friends and family being some of them.
+                    </p>
+                    <p>
+                        The "About Me" I have ever written before are my University Application Essays and my Artist Statements,
+                        in which I explain why I am applying to higher education or what I am doing with my art.
+                        I hereby explain why I am here and what I am doing.
+                    </p>
+                    <p>
+                        I am here to experience another life and another part of the world.
+                        In 10 years this moment would be like a dream for me,
+                        and I will no longer be experiencing this place as an insider, just like before I came. I do sculpture,
+                        shape cardboard, shattered glass, and wax. I play games, and I make games. I code.
+                        I find meaning by identifying and representing objects with data.
+                        I set pointers to recall this moment and come back to this dream when I need to.
+                        I travel in time, and fetch the pieces of dreams in the palace I built,
+                        feeding them into an ever-going execution cycle.
+                        I manufacture, with my fetch-execute cycle, from my pieces of dreams and experiences,
+                        new dreams and experiences that have not happened before.
+                        I am thus, instead of an artist, a manufacturer of art, or whatever my products are called.
+                    </p>
+                    <p>
+                        I am a piece of flesh on a set of bones. In the end, I am a writer.
+                        A writer means a variable or a recorder.
+                        I change things and record what has been changed; that is called a test. I am a tester with my writings.
+                    </p>
+                </main>
+            </div>
+            <footer>
+                <p>All Rights Reserved by Zhixin Li <a href="./credit.html">Credit</a> &copy;</p>
+            </footer>
+        </div>
     </body>
 
 </html>
