--- a/proj/projects.html
+++ b/proj/projects.html
@@ -31,6 +31,7 @@
         </nav>
         <main>
             <h1>Projects Participated</h1>
+            <br>
 
             <h2>Collaborated ADV Game Demo</h2>
             <p><strong>May 2022 to February 2023</strong></p>
@@ -38,6 +39,8 @@
             <p> • Worked with fellow Computer Science students at McGill University to make an ADV game in Unity.</p>
             <p> • Responsible for every art asset, implemented them for the programmer’s ease of use, and designed the settings and characters from scratch. </p>
             <p> • Communicated effectively with peers and followed up on feedback to improve game quality.</p>
+            <br>
+            <br>
 
             <h2>Collaborative Animated Project</h2>
             <p><strong>May 2022 to February 2023</strong></p>
@@ -46,21 +49,28 @@
             <p> • Worked with fellow Animation students at the University of the Arts London and Boston University.</p>
             <p> • Responsible for background design with given color, style, and description.</p>
             <p> • Communicated effectively with peers and very responsive to deadlines.</p>
+            <br>
+            <br>
 
             <h2>Calculator Web Application</h2>
             <p>
                 <input type="text" id="x">
+                <strong id="calc_sign"></strong>
                 <input type="text" id="y">
+                <strong>=</strong>
+                <strong id="output"></strong>
             </p>
             <br>
-            <button onclick="Addition()">+</button>
-            <button onclick="Subtraction()">-</button>
-            <button onclick="Multiplication()">x</button>
-            <button onclick="Division()">/</button>
-            <button onclick="Power()">x<sup>y</sup></button>
-            <button onclick="Clear()">C</button>
-
-            <div id="output"></div>
+            <ul class="calc_buttons">
+                <li><button onclick="Addition()"> + </button></li>
+                <li><button onclick="Subtraction()"> - </button></li>
+                <li><button onclick="Multiplication()"> × </button></li>
+                <li><button onclick="Division()"> ÷ </button></li>
+                <li><button onclick="Power()"> x<sup>y</sup> </button></li>
+                <li><button onclick="Clear()"> C </button></li>
+            </ul>
+            <br>
+            <br>
 
         </main>
     </div>
