--- a/ref/contact.html
+++ b/ref/contact.html
@@ -30,6 +30,13 @@
             </ul>
         </nav>
         <main>
+            <h1>Contact</h1>
+            <br>
+
+            <h3>LinkedIn: <a href="https://www.linkedin.com/in/%E4%B9%8B%E5%BF%83-%E6%9D%8E-b5025a256/">https://www.linkedin.com/in/%E4%B9%8B%E5%BF%83-%E6%9D%8E-b5025a256/</a></h3>
+            <h3>The Dots: <a href="https://the-dots.com/users/zhixin-li-1948328">https://the-dots.com/users/zhixin-li-1948328</a></h3>
+            <br>
+            <br>
 
         </main>
     </div>
