Final adjustments according to Piazza posts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="./src/styles/resume_styles.css">
     </head>
     <body>
-        <div>
+        <div class="page_wrapper">
             <header>
                 <h1>Zhixin Li</h1>
                 <p>Current Boston University Student in Computer Science (BA) and Sculpture (BFA).</p>
