--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -4,98 +4,98 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Resume | -L.Z.X-</title>
-    <link rel="stylesheet" type="text/css" href="../src/styles/resume_styles.css">
-</head>
-<body>
-<div>
-    <header>
-        <h1>Zhixin Li</h1>
-        <p>Current Boston University Student in Computer Science (BA) and Sculpture (BFA).</p>
-    </header>
-    <div class="container">
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../edu/education.html">Education</a></li>
-                <li><a href="../exp/experience.html">Experiences</a></li>
-                <li><a href="../proj/projects.html">Projects</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <!-- <li><a href="certificate.html">Certificates</a></li> -->
-                <!-- <li><a href="reference.html">References</a></li> -->
-                <!-- <li><a href="achievement.html">Achievements</a></li> -->
-                <li><a href="../ref/contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main>
-            <h1>Portfolio</h1>
-            <br>
+    <head>
+        <meta charset="UTF-8">
+        <title>Resume | -L.Z.X-</title>
+        <link rel="stylesheet" type="text/css" href="../src/styles/resume_styles.css">
+    </head>
+    <body>
+        <div class="page_wrapper">
+            <header>
+                <h1>Zhixin Li</h1>
+                <p>Current Boston University Student in Computer Science (BA) and Sculpture (BFA).</p>
+            </header>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../edu/education.html">Education</a></li>
+                        <li><a href="../exp/experience.html">Experiences</a></li>
+                        <li><a href="../proj/projects.html">Projects</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <!-- <li><a href="certificate.html">Certificates</a></li> -->
+                        <!-- <li><a href="reference.html">References</a></li> -->
+                        <!-- <li><a href="achievement.html">Achievements</a></li> -->
+                        <li><a href="../ref/contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+                <main>
+                    <h1>Portfolio</h1>
+                    <br>
 
-            <h2>Collaborated ADV Game Demo</h2>
-            <h3>Character Animation Design</h3>
-            <div class="portfolio">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/X27TZSqls1s?si=662RY-CKLnQbPeED"
-                        title="YouTube video player" frameborder="0" allow="accelerometer;
-                        autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
-                <img src="../src/img/EnemyAlterAttackA201226.png" alt="Enemy_Sample">
-                <img src="../src/img/CharacterAttack221204.png" alt="Character_Sample">
+                    <h2>Collaborated ADV Game Demo</h2>
+                    <h3>Character Animation Design</h3>
+                    <div class="portfolio">
+                        <iframe src="https://www.youtube.com/embed/X27TZSqls1s?si=662RY-CKLnQbPeED"
+                                title="YouTube video player" frameborder="0" allow="accelerometer;
+                                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                        </iframe>
+                        <img src="../src/img/EnemyAlterAttackA201226.png" alt="Enemy_Sample">
+                        <img src="../src/img/CharacterAttack221204.png" alt="Character_Sample">
+                    </div>
+                    <br>
+
+                    <h3>Background Design</h3>
+                    <div class="portfolio">
+                        <img src="../src/img/BacgroundExample1.2.png" alt="Background_Sample">
+                        <img src="../src/img/BackgroundRitual090737.png" alt="Background_Sample">
+                        <img src="../src/img/BacgroundSheet001.png" alt="Background_Sample">
+                        <img src="../src/img/BacgroundSheet002.png" alt="Background_Sample">
+                    </div>
+                    <br>
+                    <br>
+
+                    <h2>Collaborative Animated Project</h2>
+                    <h3>Finished Product</h3>
+                    <div class="portfolio">
+                        <iframe src="https://www.youtube.com/embed/ztDsI_jmMSw?si=3m4rGTjIWzsVJcVf&amp;start=24"
+                                title="YouTube video player" frameborder="0" allow="accelerometer;
+                                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                        </iframe>
+                    </div>
+                    <br>
+
+                    <h3>Background Design</h3>
+                    <div class="portfolio">
+                        <img src="../src/img/Animation_Background_01_v1.png" alt="Background_S301">
+                        <img src="../src/img/Animation_Background_02_v0.2.png" alt="Background_S302">
+                        <img src="../src/img/S2_bg1_vlined.png" alt="Background_S201">
+                        <img src="../src/img/S2_bg2_vlined.png" alt="Background_S202">
+                        <img src="../src/img/S2_bg5_vlined.png" alt="Background_S205">
+                        <img src="../src/img/S2_bg6_vlined.png" alt="Background_S206">
+                    </div>
+                    <br>
+                    <br>
+
+                    <h2>Independent Animation Commission</h2>
+                    <div class="portfolio">
+                        <iframe src="https://www.youtube.com/embed/8yQoLeEa6EM?si=0Ft_IOoo3F_ebIpc"
+                                title="YouTube video player" frameborder="0" allow="accelerometer;
+                                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                        </iframe>
+                    </div>
+                    <br>
+                    <br>
+
+                </main>
             </div>
-            <br>
-
-            <h3>Background Design</h3>
-            <div class="portfolio">
-                <img src="../src/img/BacgroundExample1.2.png" alt="Background_Sample">
-                <img src="../src/img/BackgroundRitual090737.png" alt="Background_Sample">
-                <img src="../src/img/BacgroundSheet001.png" alt="Background_Sample">
-                <img src="../src/img/BacgroundSheet002.png" alt="Background_Sample">
-            </div>
-            <br>
-            <br>
-
-            <h2>Collaborative Animated Project</h2>
-            <h3>Finished Product</h3>
-            <div class="portfolio">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ztDsI_jmMSw?si=3m4rGTjIWzsVJcVf&amp;start=24"
-                        title="YouTube video player" frameborder="0" allow="accelerometer;
-                        autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
-            </div>
-            <br>
-
-            <h3>Background Design</h3>
-            <div class="portfolio">
-                <img src="../src/img/Animation_Background_01_v1.png" alt="Background_S301">
-                <img src="../src/img/Animation_Background_02_v0.2.png" alt="Background_S302">
-                <img src="../src/img/S2_bg1_vlined.png" alt="Background_S201">
-                <img src="../src/img/S2_bg2_vlined.png" alt="Background_S202">
-                <img src="../src/img/S2_bg5_vlined.png" alt="Background_S205">
-                <img src="../src/img/S2_bg6_vlined.png" alt="Background_S206">
-            </div>
-            <br>
-            <br>
-
-            <h2>Independent Animation Commission</h2>
-            <div class="portfolio">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/8yQoLeEa6EM?si=0Ft_IOoo3F_ebIpc"
-                        title="YouTube video player" frameborder="0" allow="accelerometer;
-                        autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
-            </div>
-            <br>
-            <br>
-
-        </main>
-    </div>
-    <footer>
-        <p>All Rights Reserved by Zhixin Li <a href="../credit.html">Credit</a> &copy;</p>
-    </footer>
-</div>
-</body>
+            <footer>
+                <p>All Rights Reserved by Zhixin Li <a href="../credit.html">Credit</a> &copy;</p>
+            </footer>
+        </div>
+    </body>
 
 </html>
