--- a/ref/contact.html
+++ b/ref/contact.html
@@ -4,46 +4,46 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Resume | -L.Z.X-</title>
-    <link rel="stylesheet" type="text/css" href="../src/styles/resume_styles.css">
-</head>
-<body>
-<div>
-    <header>
-        <h1>Zhixin Li</h1>
-        <p>Current Boston University Student in Computer Science (BA) and Sculpture (BFA).</p>
-    </header>
-    <div class="container">
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../edu/education.html">Education</a></li>
-                <li><a href="../exp/experience.html">Experiences</a></li>
-                <li><a href="../proj/projects.html">Projects</a></li>
-                <li><a href="../portfolio/portfolio.html">Portfolio</a></li>
-                <!-- <li><a href="certificate.html">Certificates</a></li> -->
-                <!-- <li><a href="reference.html">References</a></li> -->
-                <!-- <li><a href="achievement.html">Achievements</a></li> -->
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main>
-            <h1>Contact</h1>
-            <br>
+    <head>
+        <meta charset="UTF-8">
+        <title>Resume | -L.Z.X-</title>
+        <link rel="stylesheet" type="text/css" href="../src/styles/resume_styles.css">
+    </head>
+    <body>
+        <div class="page_wrapper">
+            <header>
+                <h1>Zhixin Li</h1>
+                <p>Current Boston University Student in Computer Science (BA) and Sculpture (BFA).</p>
+            </header>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../edu/education.html">Education</a></li>
+                        <li><a href="../exp/experience.html">Experiences</a></li>
+                        <li><a href="../proj/projects.html">Projects</a></li>
+                        <li><a href="../portfolio/portfolio.html">Portfolio</a></li>
+                        <!-- <li><a href="certificate.html">Certificates</a></li> -->
+                        <!-- <li><a href="reference.html">References</a></li> -->
+                        <!-- <li><a href="achievement.html">Achievements</a></li> -->
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+                <main>
+                    <h1>Contact</h1>
+                    <br>
 
-            <h3>LinkedIn: <a href="https://www.linkedin.com/in/%E4%B9%8B%E5%BF%83-%E6%9D%8E-b5025a256/">https://www.linkedin.com/in/%E4%B9%8B%E5%BF%83-%E6%9D%8E-b5025a256/</a></h3>
-            <h3>The Dots: <a href="https://the-dots.com/users/zhixin-li-1948328">https://the-dots.com/users/zhixin-li-1948328</a></h3>
-            <br>
-            <br>
+                    <h3>LinkedIn: <a href="https://www.linkedin.com/in/%E4%B9%8B%E5%BF%83-%E6%9D%8E-b5025a256/">https://www.linkedin.com/in/%E4%B9%8B%E5%BF%83-%E6%9D%8E-b5025a256/</a></h3>
+                    <h3>The Dots: <a href="https://the-dots.com/users/zhixin-li-1948328">https://the-dots.com/users/zhixin-li-1948328</a></h3>
+                    <br>
+                    <br>
 
-        </main>
-    </div>
-    <footer>
-        <p>All Rights Reserved by Zhixin Li <a href="../credit.html">Credit</a> &copy;</p>
-    </footer>
-</div>
-</body>
+                </main>
+            </div>
+            <footer>
+                <p>All Rights Reserved by Zhixin Li <a href="../credit.html">Credit</a> &copy;</p>
+            </footer>
+        </div>
+    </body>
 
 </html>
